--- a/index.html
+++ b/index.html
@@ -1,13 +1,60 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
-  </head>
-  <body>
-    <h1>Hello, world!</h1>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
-  </body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+    <link rel="stylesheet" href="style.css">
+</head>
+
+<body>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa"
+        crossorigin="anonymous"></script>
+
+    <header>
+        <!-- navbar  -->
+      <div class="container">
+        <nav class="navbar navbar-expand-lg">
+            <div class="container-fluid">
+              <a class="navbar-brand fs-1 fw-bold dark2" href="#">Edu Learn</a>
+              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+              </button>
+              <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav m-auto">
+                    <li class="nav-item m-2">
+                        <a class="nav-link dark3" aria-current="page" href="#">Home</a>
+                    </li>
+                    <li class="nav-item m-2">
+                        <a class="nav-link dark3" href="#">Courses</a>
+                    </li>
+    
+                    <li class="nav-item">
+                        <a class="nav-link dark3 m-2">Deals</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link dark3 m-2">Success</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link dark3 m-2">About</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link dark3 m-2">Registration</a>
+                    </li>       
+                </ul>
+                <button class="btn btn-outline-primary" type="submit">Register</button>
+              </div>
+            </div>
+          </nav>
+      </div>
+
+      <!-- navbar end  -->
+
+    </header>
+</body>
+
 </html>
