--- a/index.html
+++ b/index.html
@@ -17,44 +17,252 @@
 
     <header>
         <!-- navbar  -->
-      <div class="container">
-        <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-              <a class="navbar-brand fs-1 fw-bold dark2" href="#">Edu Learn</a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav m-auto">
-                    <li class="nav-item m-2">
-                        <a class="nav-link dark3" aria-current="page" href="#">Home</a>
-                    </li>
-                    <li class="nav-item m-2">
-                        <a class="nav-link dark3" href="#">Courses</a>
-                    </li>
-    
-                    <li class="nav-item">
-                        <a class="nav-link dark3 m-2">Deals</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link dark3 m-2">Success</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link dark3 m-2">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link dark3 m-2">Registration</a>
-                    </li>       
-                </ul>
-                <button class="btn btn-outline-primary" type="submit">Register</button>
-              </div>
+        <div class="container">
+            <nav class="navbar navbar-expand-lg">
+                <div class="container-fluid">
+                    <a class="navbar-brand fs-1 fw-bold dark2" href="#">Edu Learn</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                        data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                        aria-expanded="false" aria-label="Toggle navigation">
+                        <span class="navbar-toggler-icon"></span>
+                    </button>
+                    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                        <ul class="navbar-nav m-auto">
+                            <li class="nav-item m-2">
+                                <a class="nav-link dark3" aria-current="page" href="#">Home</a>
+                            </li>
+                            <li class="nav-item m-2">
+                                <a class="nav-link dark3" href="#">Courses</a>
+                            </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link dark3 m-2">Deals</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link dark3 m-2">Success</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link dark3 m-2">About</a>
+                            </li>
+                            <li class="nav-item">
+                                <a class="nav-link dark3 m-2">Registration</a>
+                            </li>
+                        </ul>
+                        <button class="btn btn-outline-primary" type="submit">Register</button>
+                    </div>
+                </div>
+            </nav>
+        </div>
+
+        <!-- navbar end  -->
+
+        <!-- banner  -->
+
+        <div class="container mt-3 mb-5">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide" data-bs-ride="carousel">
+                <div class="carousel-inner">
+                    <div class="carousel-item active" data-bs-interval="10000">
+                        <figure class="bg-dark">
+                            <img src="images/cover/cover-1.png" class="d-block w-100 border-5 opacity-50" alt="...">
+                        </figure>
+                    </div>
+                    <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+                        <h1 class="fs-1 fw-bolder text-white">Get Started Digital <br> Learning</h1>
+                        <p class="text-white">It is a long established fact that a reader will be distracted by the
+                            readable <br>
+                            content of
+                            a page when looking at its layout.</p>
+                        <button class="btn button-color text-white" type="submit">Get Started</button>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="10000">
+                        <img src="images/cover/cover-2.jpg" class="d-block w-100 border-5  opacity-50" alt="...">
+                    </div>
+                    <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+                        <h1 class="fs-1 fw-bolder text-white">Get Started Digital <br> Learning</h1>
+                        <p class="text-white">It is a long established fact that a reader will be distracted by the
+                            readable <br>
+                            content of
+                            a page when looking at its layout.</p>
+                        <button class="btn button-color text-white" type="submit">Get Started</button>
+                    </div>
+                    <div class="carousel-item" data-bs-interval="10000">
+                        <img src="images/cover/cover-3.jpg" class="d-block w-100 border-5  opacity-50" alt="...">
+                    </div>
+                    <div class="carousel-caption d-flex flex-column justify-content-center align-items-center">
+                        <h1 class="fs-1  fw-bolder text-white">Get Started Digital <br> Learning</h1>
+                        <p class="text-white">It is a long established fact that a reader will be distracted by the
+                            readable <br>
+                            content of
+                            a page when looking at its layout.</p>
+                        <button class="btn button-color text-white" type="submit">Get Started</button>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+
             </div>
-          </nav>
-      </div>
+        </div>
 
-      <!-- navbar end  -->
-
+        <!-- bannar end  -->
+        </div>
     </header>
+
+    <main>
+        <div class="d-flex flex-column justify-content-center align-items-center mb-5">
+            <h1 class="text-center">
+                Discover Our Popular <br> Courses
+            </h1>
+            <p class="text-center">
+                It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                when looking at its layout.
+            </p>
+        </div>
+
+        <!-- course grid  -->
+
+
+        <div class="container row row-cols-1 row-cols-lg-2 gap-5 mx-auto justify-content-center mb-5">
+            <div class="card mb-auto p-0" style="max-width: 540px;">
+                <div class="d-flex flex-lg-row flex-column">
+                    <div class="col-md-4 ">
+                        <img src="images/course/course-1.png" class="img-fluid" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-auto p-0" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-2.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-auto p-0" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-3.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-auto p-0" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-4.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-auto p-0" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-5.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="card mb-auto mt-auto p-0" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-4">
+                        <img src="images/course/course-6.png" class="img-fluid rounded-start" alt="...">
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">Card title</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="container d-flex justify-content-center mb-5">
+            <button type="button" class="btn button-color text-white">See more courses</button>
+        </div>
+
+        <!-- course section end  -->
+
+        <div class="container d-flex flex-row justify-content-between img-back p-0 align-items-center  mt-5 mb-5">
+            <div class="me-5">
+                <img src="images/working.png" alt="">
+            </div>
+            <div class="me-2 mb-1">
+                <h1 class="dark1">
+                    Explore The elearning <br> Institute
+                </h1>
+                <p class="dark3">
+                    There are many variations of passages of Lorem Ipsum available, but the majority have suffered
+                    alteration in some form, by injected humour, or randomised words which don't look even slightly
+                    believable. If you are going to use a passage of Lorem Ipsum, you need to be sure. <br><br>
+
+                    Anything embarrassing hidden in the middle of text. All the Lorem Ipsum generators on the Internet
+                    tend to repeat predefined.
+                </p>
+                <div class="d-flex flex-row justify-content-start">
+
+                    <div class="me-3">
+                        <h1 class="dark1">3.2K+</h1>
+                        <p class="dark3">Online Course</p>
+                    </div>
+                    <div class="me-3">
+                        <h1 class="dark1">600K+</h1>
+                        <p class="dark3">Expert Members</p>
+                    </div>
+                    <div class="me-3">
+                        <h1 class="dark1">1K+</h1>
+                        <p class="dark3">Rating & Review</p>
+                    </div>
+                </div>
+                <button type="button" class="btn button-color text-white">Read More</button>
+            </div>
+        </div>
+    </main>
 </body>
 
 </html>
