working man is done

--- a/index.html
+++ b/index.html
@@ -228,11 +228,12 @@
 
         <!-- course section end  -->
 
-        <div class="container d-flex flex-row justify-content-between img-back p-0 align-items-center  mt-5 mb-5">
-            <div class="me-5">
-                <img src="images/working.png" alt="">
+        <div
+            class="container gap-5 d-flex flex-lg-row justify-content-lg-between img-back p-0 align-items-center flex-column align-items-center justify-content-center mt-lg-5 mb-lg-5">
+            <div >
+                <img class="img-fluid" src="images/working.png" alt="">
             </div>
-            <div class="me-2 mb-1">
+            <div class=" me-lg-2 mb-lg-1 ms-3 mb-3">
                 <h1 class="dark1">
                     Explore The elearning <br> Institute
                 </h1>
