--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
 
         <div
             class="container gap-5 d-flex flex-lg-row justify-content-lg-between img-back p-0 align-items-center flex-column align-items-center justify-content-center mt-lg-5 mb-lg-5">
-            <div >
+            <div>
                 <img class="img-fluid" src="images/working.png" alt="">
             </div>
             <div class=" me-lg-2 mb-lg-1 ms-3 mb-3">
@@ -263,6 +263,25 @@
                 <button type="button" class="btn button-color text-white">Read More</button>
             </div>
         </div>
+
+        <!-- ready  -->
+
+        <div class="container card text-center button-color mb-5 p-5">
+            <div class="card-body  d-flex flex-row justify-content-between align-items-center">
+                <div>
+                    <h1 class="text-white">Ready to join?</h1>
+                    <p class="text-white">
+                        It is a long established fact that a reader will be distracted by the <br> readable content of a
+                        page
+                        when looking at its layout.
+                    </p>
+                </div>
+                <div>
+                    <button type="button" class="btn btn-light text-primary">Register Now</button>
+                </div>
+            </div>
+        </div>
+
     </main>
 </body>
 
