--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
         <!-- ready  -->
 
         <div class="container card text-center button-color mb-5 p-5">
-            <div class="card-body  d-flex flex-row justify-content-between align-items-center">
+            <div class="card-body  d-flex flex-lg-row flex-column justify-content-between align-items-center">
                 <div>
                     <h1 class="text-white">Ready to join?</h1>
                     <p class="text-white">
@@ -282,6 +282,62 @@
             </div>
         </div>
 
+        <div class="container d-flex flex-column mb-5">
+            <h1>
+                Meet Our Successfull <br> Students
+            </h1>
+            <p class="dark3">
+                It is a long established fact that a reader will be distracted by the <br> readable content of a page when
+                looking at its layout.
+            </p>
+        </div>
+
+
+        <!-- success students  -->
+
+        <div class="container mb-5">
+            <div class="row row-cols-1 row-cols-md-4 g-4 mb-4">
+                <div class="col">
+                  <div class="card">
+                    <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Awlad Hossain</h5>
+                      <p class="card-text dark3">UIUX Designer</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Jannatul Islam</h5>
+                      <p class="card-text dark3">Motion Design</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Imran Hossain</h5>
+                      <p class="card-text dark3">TGraphic Designer</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col">
+                  <div class="card">
+                    <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                    <div class="card-body">
+                      <h5 class="card-title">Nishi Akter</h5>
+                      <p class="card-text dark3">Web Developer</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="container d-flex justify-content-center mb-5">
+                <button type="button" class="btn button-color text-white">See more courses</button>
+            </div>    
+        </div>
     </main>
 </body>
 
