--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/6f5380793b.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
@@ -121,7 +122,7 @@
             <h1 class="text-center">
                 Discover Our Popular <br> Courses
             </h1>
-            <p class="text-center">
+            <p class="text-center dark3">
                 It is a long established fact that a reader will be distracted by the readable <br> content of a page
                 when looking at its layout.
             </p>
@@ -287,7 +288,8 @@
                 Meet Our Successfull <br> Students
             </h1>
             <p class="dark3">
-                It is a long established fact that a reader will be distracted by the <br> readable content of a page when
+                It is a long established fact that a reader will be distracted by the <br> readable content of a page
+                when
                 looking at its layout.
             </p>
         </div>
@@ -298,45 +300,107 @@
         <div class="container mb-5">
             <div class="row row-cols-1 row-cols-md-4 g-4 mb-4">
                 <div class="col">
-                  <div class="card">
-                    <img src="images/student/student-1.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Awlad Hossain</h5>
-                      <p class="card-text dark3">UIUX Designer</p>
+                    <div class="card">
+                        <img src="images/student/student-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Awlad Hossain</h5>
+                            <p class="card-text dark3">UIUX Designer</p>
+                        </div>
                     </div>
-                  </div>
                 </div>
                 <div class="col">
-                  <div class="card">
-                    <img src="images/student/student-2.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Jannatul Islam</h5>
-                      <p class="card-text dark3">Motion Design</p>
+                    <div class="card">
+                        <img src="images/student/student-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Jannatul Islam</h5>
+                            <p class="card-text dark3">Motion Design</p>
+                        </div>
                     </div>
-                  </div>
                 </div>
                 <div class="col">
-                  <div class="card">
-                    <img src="images/student/student-3.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Imran Hossain</h5>
-                      <p class="card-text dark3">TGraphic Designer</p>
+                    <div class="card">
+                        <img src="images/student/student-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Imran Hossain</h5>
+                            <p class="card-text dark3">TGraphic Designer</p>
+                        </div>
                     </div>
-                  </div>
                 </div>
                 <div class="col">
-                  <div class="card">
-                    <img src="images/student/student-4.png" class="card-img-top" alt="...">
-                    <div class="card-body">
-                      <h5 class="card-title">Nishi Akter</h5>
-                      <p class="card-text dark3">Web Developer</p>
+                    <div class="card">
+                        <img src="images/student/student-4.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nishi Akter</h5>
+                            <p class="card-text dark3">Web Developer</p>
+                        </div>
                     </div>
-                  </div>
                 </div>
-              </div>
-              <div class="container d-flex justify-content-center mb-5">
+            </div>
+            <div class="container d-flex justify-content-center mb-5">
                 <button type="button" class="btn button-color text-white">See more courses</button>
-            </div>    
+            </div>
+        </div>
+        <div class="d-flex flex-column justify-content-center align-items-center mb-5">
+            <h1 class="text-center">
+                Some Students Feedback
+            </h1>
+            <p class="text-center dark3">
+                It is a long established fact that a reader will be distracted by the readable <br> content of a page
+                when
+                looking at its layout.
+            </p>
+        </div>
+ 
+        <div class="container d-flex flex-column flex-lg-row justify-content-between mb-5">
+            <div class="p-5 course-border shadow-lg"> 
+                <div class="d-flex flex-row justify-content-between mb-3">
+                    <img src="images/comma.png" alt="">
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                </div>
+                <p class="dark3 mb-3">
+                    There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
+                    alteration in some form, by injected <br> humour, or randomised words which don't look even slightly <br>
+                    believable. If you are going to use a passage of Lorem.
+                </p>
+                <div class="d-flex flex-row align-items-center">
+                    <img class="me-3" src="images/student/student-5.png" alt="">
+                    <div>
+                        <p class="m-0">Awlad Hossain</p>
+                        <p class="dark3 m-0">UI Designer</p>
+                    </div>
+                </div>
+            </div>
+            <div class="p-5 course-border shadow-lg">
+                <div class="d-flex flex-row justify-content-between mb-3">
+                    <img src="images/comma.png" alt="">
+                    <div>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star"></i>
+                        <i class="fa-solid fa-star-half-stroke"></i>
+                    </div>
+                </div>
+                <p class="dark3 mb-3">
+                    There are many variations of passages of Lorem Ipsum available, but <br> the majority have suffered
+                    alteration in some form, by injected <br> humour, or randomised words which don't look even slightly <br>
+                    believable. If you are going to use a passage of Lorem.
+                </p>
+                <div class="d-flex flex-row align-items-center">
+                    <img class="me-3" src="images/student/student-6.png" alt="">
+                    <div>
+                        <p class="m-0">Awlad Hossain</p>
+                        <p class="dark3 m">Grapics Designer</p>
+                    </div>
+                </div>
+            </div>
+
         </div>
     </main>
 </body>
