--- a/index.html
+++ b/index.html
@@ -71,7 +71,8 @@
                             <div class="d-flex flex-column justify-content-center align-items-center">
                                 <span>
                                     <h1 class="fw-bolder text-white h1-size-small mb-sm-0 mb-lg-3">Get Started Digital
-                                        <br> Learning</h1>
+                                        <br> Learning
+                                    </h1>
                                 </span>
                                 <p class="text-white mb-sm-0 p-small mb-lg-3">It is a long established fact that a
                                     reader will be distracted by the
@@ -504,9 +505,9 @@
             <h1 class="dark1 text-center mb-3">
                 Trusted by over 800+ companies
             </h1>
-             <!-- Companys  -->
-    
-             <div class="container d-lg-flex flex-lg-row justify-content-lg-around mb-5">
+            <!-- Companys  -->
+
+            <div class="container d-lg-flex flex-lg-row justify-content-lg-around mb-5">
                 <img src="images/company/company-1.png" alt="">
                 <img src="images/company/company-2.png" alt="">
                 <img src="images/company/company-3.png" alt="">
@@ -516,8 +517,29 @@
             </div>
         </div>
 
-       
 
+
+        <!-- footer  -->
+
+
+        <footer class=" bg-black h-100 d-flex flex-column justify-content-center align-items-center">
+
+            <h1 class="text-white  mb-3 mt-5">Pro Learn</h1>
+            <p class="dark3 mb-0 text-center">
+                Office 41, Zawaya Buildin, Ghala Muscat, <br>
+                Sultanate of Oman
+            </p>
+            <p class="dark3">
+                Privacy Ploicy  |   Terms of use
+            </p>
+            <div class="mb-5">
+
+                <i class="fa-brands fa-facebook text-white fs-4 me-2"></i>
+                <i class="fa-brands fa-twitter text-white fs-4 me-2 "></i>
+                <i class="fa-brands fa-linkedin text-white fs-4 me-2"></i>
+                <i class="fa-brands fa-tiktok text-white fs-4 me-2"></i>
+            </div>
+        </footer>
     </main>
 </body>
 
