--- a/index.html
+++ b/index.html
@@ -245,10 +245,10 @@
 
         <div
             class="p-0 img-back container mt-5 mb-5 d-flex flex-lg-row d-md-flex flex-md-row flex-column justify-content-md-between justify-content-lg-between align-items-md-center align-items-lg-center mt-lg-5 mb-lg-5 ">
-            <div class="w-50 me-lg-5">
+            <div class="w-50 me-lg-5 working">
                 <img class="w-100" src="images/working.png" alt="">
             </div>
-            <div class="me-lg-2 mb-lg-1 ms-md-5 me-md-2 w-50">
+            <div class="p-3 me-lg-2 mb-lg-1 ms-md-5 me-md-2 w-50 working">
                 <h1 class="dark1 mb-lg-5 h1-size-small">
                     Explore The elearning <br> Institute
                 </h1>
