--- a/index.html
+++ b/index.html
@@ -287,14 +287,14 @@
                 class="card-body  d-flex flex-lg-row flex-column justify-content-between align-items-center ps-lg-5 pe-lg-5">
                 <div>
                     <h1 class="text-white h1-size-small text-start">Ready to join?</h1>
-                    <p class="text-white p-small text-start">
+                    <p class="text-white p-small gtext-start">
                         It is a long established fact that a reader will be distracted by the <br> readable content of a
                         page
                         when looking at its layout.
                     </p>
                 </div>
 
-                <button onclick="" type="button" class="btn bg-white pricecolor" id="liveToastBtn">Register</button>
+                <button onclick="" type="button" class="btn bg-white pricecolor" id="liveToastBtn">Register Now</button>
                 <div class="bg-light toast-container  position-fixed end-0 top-0 p-3">
                     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                         <div class="toast-header">
