--- a/index.html
+++ b/index.html
@@ -284,17 +284,17 @@
 
         <div class="container card text-center button-color mb-lg-5 pt-lg-5 pb-lg-5 mb-5">
             <div
-                class="card-body  d-flex flex-lg-row flex-column justify-content-between align-items-center ps-lg-5 pe-lg-5">
+                class="card-body  d-flex flex-column justify-content-center align-items-center flex-lg-row justify-content-lg-between align-items-lg-center ps-lg-5 pe-lg-5">
                 <div>
-                    <h1 class="text-white h1-size-small text-start">Ready to join?</h1>
-                    <p class="text-white p-small gtext-start">
+                    <h1 class="text-white h1-size-small text-center">Ready to join?</h1>
+                    <p class="text-white p-small text-center">
                         It is a long established fact that a reader will be distracted by the <br> readable content of a
                         page
                         when looking at its layout.
                     </p>
                 </div>
 
-                <button onclick="" type="button" class="btn bg-white pricecolor" id="liveToastBtn">Register Now</button>
+                <button onclick="" type="button" class="btn bg-white pricecolor " id="liveToastBtn">Register Now</button>
                 <div class="bg-light toast-container  position-fixed end-0 top-0 p-3">
                     <div id="liveToast" class="toast" role="alert" aria-live="assertive" aria-atomic="true">
                         <div class="toast-header">
